fixed text alignmens

--- a/src/dashboard/recenttrades/RecentTrades.css
+++ b/src/dashboard/recenttrades/RecentTrades.css
@@ -104,3 +104,12 @@
   font-size: 1.1rem;
   /* font-weight: bold; */
 }
+
+
+.calendar-header-one{
+  text-align: center;
+  font-size: 1.5rem;
+  text-align: center;
+  margin-bottom: 0.55rem;
+  color: #66ffcc;
+}
